Nodes in 2.70-RC2 and source build 211f08d extremely unstable (segfault crash) #39209

Closed
opened 2014-03-16 01:30:02 +01:00 by Jean Ayer · 24 comments

System Information
Linux Mint 16 // GTX460 (nvidia drivers 334.21, also occurred in 331.38)
Reproduced by at least one other person on IRC

Blender Version
Broken: 2.70-RC2 2525f9c and source build 211f08d
Worked: 2.69.0 does not seem to crash from these steps

Short description of error
With a node material, typical material editing causes blender to crash instantly.
Crashes encountered with: adjusting Hardness, disabling a texture, connecting nodes, mousing over nodes

Exact steps for others to reproduce the error
Steps in attached .blend; basically just disable one texture or adjust material properties.
nodecrash-minimal-2.blend

Crash text
Blender 2.70 (sub 0), Commit date: 2014-03-15 16:37, Hash 211f08d
bpy.data.materials["nodemat"].use_textures- [x] = False # Property
bpy.data.materials["nodemat"].use_textures- [x] = True # Property

backtrace
./blender() [0x8d6f95]
/lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7eff99122ff0]
./blender(GPU_material_free+0x21) [0xfa98a1]
./blender(ED_render_id_flush_update+0x106) [0xb4c516]
./blender() [0xe83a9b]
./blender(DAG_ids_flush_tagged+0x97) [0xe84807]
./blender(BKE_scene_update_tagged+0x4f) [0xf3698f]
./blender(wm_event_do_notifiers+0x499) [0x8ddc89]
./blender(WM_main+0x20) [0x8d9000]
./blender(main+0xd7f) [0x8c2b1f]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7eff9910dde5]
./blender() [0x8d68f4]

**System Information** Linux Mint 16 // GTX460 (nvidia drivers 334.21, also occurred in 331.38) Reproduced by at least one other person on IRC **Blender Version** Broken: 2.70-RC2 2525f9c and source build 211f08d Worked: 2.69.0 does not seem to crash from these steps **Short description of error** With a node material, typical material editing causes blender to crash instantly. Crashes encountered with: adjusting Hardness, disabling a texture, connecting nodes, mousing over nodes **Exact steps for others to reproduce the error** Steps in attached .blend; basically just disable one texture or adjust material properties. [nodecrash-minimal-2.blend](https://archive.blender.org/developer/F81321/nodecrash-minimal-2.blend) **Crash text** Blender 2.70 (sub 0), Commit date: 2014-03-15 16:37, Hash 211f08d bpy.data.materials["nodemat"].use_textures- [x] = False # Property bpy.data.materials["nodemat"].use_textures- [x] = True # Property backtrace ./blender() [0x8d6f95] /lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7eff99122ff0] ./blender(GPU_material_free+0x21) [0xfa98a1] ./blender(ED_render_id_flush_update+0x106) [0xb4c516] ./blender() [0xe83a9b] ./blender(DAG_ids_flush_tagged+0x97) [0xe84807] ./blender(BKE_scene_update_tagged+0x4f) [0xf3698f] ./blender(wm_event_do_notifiers+0x499) [0x8ddc89] ./blender(WM_main+0x20) [0x8d9000] ./blender(main+0xd7f) [0x8c2b1f] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7eff9910dde5] ./blender() [0x8d68f4]
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @vravCodyBurrow

Added subscriber: @vravCodyBurrow
Author

Er, correction. Crash occurs in 2.69.0 as well. Cannot continue work on node-based material in the meantime.

Er, correction. Crash occurs in 2.69.0 as well. Cannot continue work on node-based material in the meantime.

Added subscriber: @mont29

Added subscriber: @mont29

Can’t reproduce this here (Debian 64 testing, ATI HD5730 +free driver)…

Just to be sure, are you using an "official" build from http://builder.blender.org/download/ ? If not, could you please try it?

Can’t reproduce this here (Debian 64 testing, ATI HD5730 +free driver)… Just to be sure, are you using an "official" build from http://builder.blender.org/download/ ? If not, could you please try it?
Author

Yes, I tested with a build from buildbot as well as 2.7RC2 and 2.69 from the website. The crash occurs in all. 64bit, also. Did you adjust or enable/disable multiple times? It doesn't always occur the first time.

Yes, I tested with a build from buildbot as well as 2.7RC2 and 2.69 from the website. The crash occurs in all. 64bit, also. Did you adjust or enable/disable multiple times? It doesn't always occur the first time.

Yep, I changed values at least several tens of times, without even a single little crash! ;) Even debug build with asan did not report any issue.

Now, iirc, we had other issues with ubuntu-like distros, which were LLVM conflicts related to graphic background of those distro…

But not sure at all this is the case here, backtrace does not really suggest this (though it happens in GPU Blender code).

Yep, I changed values at least several tens of times, without even a single little crash! ;) Even debug build with asan did not report any issue. Now, iirc, we had other issues with ubuntu-like distros, which were LLVM conflicts related to graphic background of those distro… But not sure at all this is the case here, backtrace does not really suggest this (though it happens in GPU Blender code).

Added subscriber: @lopataasdf

Added subscriber: @lopataasdf

I confirm crash when change hardness value many times

nodecrash-minimal-2.crash.txt:

Blender 2.70 (sub 0), Commit date: 2014-03-14 22:47, Hash 2aff243

bpy.data.materials["nodemat"].specular_hardness = 182 # Property

Win7 x64 blender-2.70-211f08d-win64-vc12

I confirm crash when change hardness value many times nodecrash-minimal-2.crash.txt: # Blender 2.70 (sub 0), Commit date: 2014-03-14 22:47, Hash 2aff243 bpy.data.materials["nodemat"].specular_hardness = 182 # Property Win7 x64 blender-2.70-211f08d-win64-vc12

Sorry, my version blender 2aff243

crashlog in Win7 x64 blender-2.70-211f08d-win64-vc12

Blender 2.70 (sub 0), Commit date: 2014-03-15 16:37, Hash 211f08d

bpy.data.materials["nodemat"].specular_hardness = 240 # Property
bpy.data.materials["nodemat"].specular_hardness = 199 # Property
bpy.data.materials["nodemat"].specular_hardness = 185 # Property
bpy.data.materials["nodemat"].specular_hardness = 443 # Property
bpy.data.materials["nodemat"].specular_hardness = 100 # Property

Sorry, my version blender 2aff243 crashlog in Win7 x64 blender-2.70-211f08d-win64-vc12 # Blender 2.70 (sub 0), Commit date: 2014-03-15 16:37, Hash 211f08d bpy.data.materials["nodemat"].specular_hardness = 240 # Property bpy.data.materials["nodemat"].specular_hardness = 199 # Property bpy.data.materials["nodemat"].specular_hardness = 185 # Property bpy.data.materials["nodemat"].specular_hardness = 443 # Property bpy.data.materials["nodemat"].specular_hardness = 100 # Property

Blender do not crash when viewport in solid mode

Blender do not crash when viewport in solid mode

Well, still can’t reproduce it, but changing settings here is rather slow, so it might miss crash…

Two things you can test:

  • Start Blender with -t 1 option (to disable multi-threaded update), and see whether it still crash?
  • Switch 3DView to multitexture, and test again.
Well, still can’t reproduce it, but changing settings here is rather slow, so it might miss crash… Two things you can test: * Start Blender with `-t 1` option (to disable multi-threaded update), and see whether it still crash? * Switch 3DView to multitexture, and test again.
  1. c:\Programs\Blender>blender.exe -t 1
    Read new prefs: C:\Users\User\AppData\Roaming\Blender Foundation\Blender\2.70\co
    nfig\userpref.blend
    found bundled python: c:\Programs\Blender\2.70\python
    read blend: C:\Temp\nodecrash-minimal-2.blend
    Writing: C:\Users\User\AppData\Local\Temp\nodecrash-minimal-2.crash.txt

  2. with multitexture not crash, but texture not displayed in viewport with this mode

1) c:\Programs\Blender>blender.exe -t 1 Read new prefs: C:\Users\User\AppData\Roaming\Blender Foundation\Blender\2.70\co nfig\userpref.blend found bundled python: c:\Programs\Blender\2.70\python read blend: C:\Temp\nodecrash-minimal-2.blend Writing: C:\Users\User\AppData\Local\Temp\nodecrash-minimal-2.crash.txt 2) with multitexture not crash, but texture not displayed in viewport with this mode
Author

The -t 1 option doesn't change results, but switching to multitexture does. The viewport must be visible / in GLSL.

This might not be useful information but I also tested this in a VirtualBox machine running Arch+DWM (no desktop environment). Blender of course rasterizes very poorly and slowly in that environment, but I was unable to replicate the crash. Interesting that it happens in both Ubuntu and Windows desktop windowing environments. (On Mint I'm running LXDE after originally installing with KDE.)

edit: lopataasdf, thanks for also testing this :)

The `-t 1` option doesn't change results, but switching to multitexture does. The viewport must be visible / in GLSL. This might not be useful information but I also tested this in a VirtualBox machine running Arch+DWM (no desktop environment). Blender of course rasterizes very poorly and slowly in that environment, but I was unable to replicate the crash. Interesting that it happens in both Ubuntu and Windows desktop windowing environments. (On Mint I'm running LXDE after originally installing with KDE.) edit: lopataasdf, thanks for also testing this :)

Added subscriber: @Sergey

Added subscriber: @Sergey

Blender 2.70 project should only contain bugs which are to be fixed for upcoming 2.70 release (aka, only regressions are to be added to this project).

Blender 2.70 project should only contain bugs which are to be fixed for upcoming 2.70 release (aka, only regressions are to be added to this project).

Can not reproduce crash here (Debian 64 bit, 540m GPU) as well..

Can not reproduce crash here (Debian 64 bit, 540m GPU) as well..
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Can't reproduce either (arch linux, GTX 660, driver 331.38)

Can't reproduce either (arch linux, GTX 660, driver 331.38)
Lukas Tönne self-assigned this 2014-03-21 12:29:22 +01:00
Member

Managed to reproduce with blender-softwaregl (thanks sergey). Seems to be a threading bug somehow, perhaps compounded by the horrible Material nesting in BI material nodes ...

Managed to reproduce with blender-softwaregl (thanks sergey). Seems to be a threading bug somehow, perhaps compounded by the horrible Material nesting in BI material nodes ...

This issue was referenced by blender/blender-addons-contrib@c626462c0f

This issue was referenced by blender/blender-addons-contrib@c626462c0fe1257c07948b49db1a41526682ba3f

This issue was referenced by c626462c0f

This issue was referenced by c626462c0fe1257c07948b49db1a41526682ba3f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c626462c0f.

Closed by commit c626462c0f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39209
No description provided.